--- a/k8s-deployment.yaml
+++ b/k8s-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: actuator-healthcheck-example
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: actuator-healthcheck-example
@@ -27,6 +27,13 @@ spec:
             initialDelaySeconds: 5
             periodSeconds: 10
             failureThreshold: 2
+          readinessProbe:
+            httpGet:
+              path: /ready
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 5
+            failureThreshold: 1
 ---
 apiVersion: v1
 kind: Service
@@ -35,8 +42,10 @@ metadata:
   labels:
     app: actuator-healthcheck-example
 spec:
+  type: NodePort
   ports:
     - port: 8080
       targetPort: 8080
+      nodePort: 31704
   selector:
     app: actuator-healthcheck-example
